# makepad_router

./: .gitignore  Cargo.toml  MAINTENANCE.md  README.md  roadmap.md
crates/makepad-router-bench/: Cargo.toml
crates/makepad-router-bench/benches/: router_perf.rs
crates/makepad-router-core/: Cargo.toml
crates/makepad-router-core/src/: lib.rs  navigation.rs  pattern.rs  registry.rs  route.rs  router.rs  state.rs  url.rs
crates/makepad-router-core/tests/: state_persistence_regression.rs  url_regression.rs
crates/makepad-router-perf/: Cargo.toml
crates/makepad-router-perf/src/: lib.rs
crates/makepad-router-widgets/: Cargo.toml
crates/makepad-router-widgets/src/: guards.rs  hero.rs  lib.rs  widget.rs
crates/makepad-router-widgets/src/widget/: actions.rs  api.rs  callbacks.rs  commands.rs  engine.rs  fields.rs  guard_flow.rs  guards.rs  hero_render.rs  inspector.rs  live_apply.rs  nested.rs  path_nav.rs  persistence.rs  route_defs.rs  route_render.rs  route_widgets.rs  transitions.rs  url_cache.rs  url_state.rs  url_sync.rs
crates/makepad-router-widgets/src/widget/features/: guards.rs  mod.rs  nested.rs  persistence.rs  transitions.rs
docs/: performance.md
examples/router_advanced_example/: Cargo.toml
examples/router_advanced_example/src/app/: mod.rs
examples/router_example/: Cargo.toml
examples/router_example/src/app/: mod.rs  shared.rs
examples/router_example/src/app/pages/: about.rs  admin.rs  detail.rs  hero.rs  home.rs  mod.rs  not_found.rs  settings.rs  stack_demo.rs  user_profile.rs
examples/router_perf_probe/: Cargo.toml
examples/router_perf_probe/src/: main.rs
scripts/: perf_check.sh
src/: guards.rs  hero.rs  lib.rs  navigation.rs  pattern.rs  registry.rs  route.rs  router.rs  state.rs  url.rs
src/widget/: actions.rs  api.rs  callbacks.rs  fields.rs  guard_flow.rs  hero.rs  hero_render.rs  inspector.rs  live_apply.rs  nested.rs  route_widgets.rs  transitions.rs  url_sync.rs
tests/: state_persistence_regression.rs  url_regression.rs
