[package]
name = "makepad-router"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad router for navigation and page management"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"

[workspace]
members = ["crates/makepad-router-core", "examples/router_example"]

[dependencies]
makepad-live-id = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
makepad-micro-serde = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
makepad-draw = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
makepad-widgets = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
makepad-router-core = { path = "crates/makepad-router-core" }
