[package]
name = "makepad-router"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad router for navigation and page management"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"

[workspace]
members = [
    "crates/makepad-router-core",
    "crates/makepad-router-widgets",
    "examples/router_example",
    "examples/router_advanced_example",
]

[dependencies]
makepad-live-id = { path = "../makepad/libs/live_id" }
makepad-micro-serde = { path = "../makepad/libs/micro_serde" }
makepad-draw = { path = "../makepad/draw" }
makepad-widgets = { path = "../makepad/widgets" }
makepad-router-core = { path = "crates/makepad-router-core" }
makepad-router-widgets = { path = "crates/makepad-router-widgets" }
