[package]
name = "makepad-router-widgets"
version = "1.0.0"
edition = "2021"
authors = ["Makepad <info@makepad.nl>"]
description = "Router widgets for Makepad"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-router-core = { path = "../makepad-router-core" }
makepad-draw = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
makepad-widgets = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
makepad-live-id = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
makepad-micro-serde = { git = "https://github.com/wheregmis/makepad.git", branch = "makepad_router", version = "1.0.0" }
