[package]
name = "makepad-router-widgets"
version = "1.0.0"
edition = "2021"
authors = ["Makepad <info@makepad.nl>"]
description = "Router widgets for Makepad"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-router-core = { path = "../makepad-router-core" }
makepad-draw = { path = "../../../makepad/draw" }
makepad-widgets = { path = "../../../makepad/widgets" }
makepad-live-id = { path = "../../../makepad/libs/live_id" }
makepad-micro-serde = { path = "../../../makepad/libs/micro_serde" }
